# autologin-plymouth

./: .build.yml  README.md  autologin.service  main.c  meson.build
.github/ISSUE_TEMPLATE/: bug_report.yaml
